src/objects/System_Design_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Scenario_1_FIT_Annual_Earnings_After_Tax__c</fullName>
        <label>Scenario 1 FIT Annual Earnings After Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_FIT_Term_Length_Months__c</fullName>
        <label>Scenario 1 FIT Term Length (Months)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Federal_Tax_Credit_Amount__c</fullName>
        <label>Scenario 1 Federal Tax Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Final_EPC_Price_NUM__c</fullName>
        <label>Scenario 1 Price Net of Upfront SREC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Final_EPC_Price__c</fullName>
        <formula>Scenario_1_Design_Price__c + Scenario_1_Total_Standard_Adjustments__c  +  Scenario_1_Total_Program_Adjustments__c + Scenario_1_VP_Sales_Adjustments__c +  Scenario_1_Line_Item_Top_Line_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Final/EPC Price ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Final_EPC_Price_per_Watt__c</fullName>
        <formula>Scenario_1_Final_EPC_Price__c / (1000 * System_Design__r.Total_System_Size_kW__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Final/EPC Price per Watt ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Financing_Monthly_Pmt_Year_1__c</fullName>
        <label>Scenario 1 Financing Monthly Pmt Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Financing_Option__c</fullName>
        <label>Scenario 1 Financing Option</label>
        <picklist>
            <picklistValues>
                <fullName>No Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enerbank - SAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enerbank - Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFC First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susquehanna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Smart E Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sungage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Financing_Rate_Year_1_kWh__c</fullName>
        <label>Scenario 1 Financing Rate Year 1 ($/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Financing_Type__c</fullName>
        <label>Scenario 1 Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scenario_1_First_Month_Payment__c</fullName>
        <label>Scenario 1 First Month Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Included_in_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scenario 1 Included in Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Installer_Paid_Incentive_Amt__c</fullName>
        <label>Scenario 1 Installer Paid Incentive Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Is_Purchase_Single_Lease__c</fullName>
        <formula>IF(ISPICKVAL(Scenario_1_Financing_Type__c ,&apos;Purchase&apos;)
  ,IF(  /* If there is only one other scenario with Financing Type = ‘Lease’ */    
    OR(
      AND(
        ISPICKVAL(Scenario_2_Financing_Type__c ,&apos;Lease&apos;)
        ,NOT(ISPICKVAL(Scenario_3_Financing_Type__c ,&apos;Lease&apos;))
        ,NOT(ISPICKVAL(Scenario_4_Financing_Type__c ,&apos;Lease&apos;))
      )
      ,AND(
        ISPICKVAL(Scenario_3_Financing_Type__c ,&apos;Lease&apos;)
	,NOT(ISPICKVAL(Scenario_4_Financing_Type__c ,&apos;Lease&apos;))
	,NOT(ISPICKVAL(Scenario_2_Financing_Type__c ,&apos;Lease&apos;))
      )
      ,AND(
        ISPICKVAL(Scenario_4_Financing_Type__c ,&apos;Lease&apos;)
        ,NOT(ISPICKVAL(Scenario_3_Financing_Type__c ,&apos;Lease&apos;))
	,NOT(ISPICKVAL(Scenario_2_Financing_Type__c ,&apos;Lease&apos;))
      )
    )
    ,true
    ,false
  )
  ,false
)</formula>
        <label>Scenario 1 Is Purchase Single Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Lease_Adjustment_Value__c</fullName>
        <label>Scenario 1 Lease Adjustment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Lease_Escalator__c</fullName>
        <label>Scenario 1 Lease Escalator (%)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Lease_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario 1 Lease Fund</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>System Design Quotes 1</relationshipLabel>
        <relationshipName>System_Design_Quotes_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Lease_Option__c</fullName>
        <label>Scenario 1 Lease Option</label>
        <picklist>
            <picklistValues>
                <fullName>Low-Upfront - Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay - Keep SRECs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Upfront - Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Upfront - Monthly - Keep SRECs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay - Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPF - Complex Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPF - Astrum Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Lease_Projected_Annual_Output__c</fullName>
        <formula>CASE(Scenario_1_Lease_Fund__r.Name 

  ,&apos;NRG Residential Solar Solutions, LLC&apos;
  , System_Design__r.NRG_Projected_Annual_Output_kWh_y__c 

  ,&apos;Sunnova Energy Corporation, LLC&apos;
  ,  System_Design__r.Sunnova_Projected_Annual_Output_kWh_y__c 

  /* Else which includes CT Lease or CPF */
  , System_Design__r.Total_Projected_Annual_Output_kWh_y__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Lease Projected Annual Output</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Lease_Site_Quality__c</fullName>
        <formula>CASE(Scenario_1_Lease_Fund__r.Name 

  ,&apos;NRG Residential Solar Solutions, LLC&apos;
  ,System_Design__r.NRG_Overall_Site_Quality__c

  ,&apos;Sunnova Energy Corporation, LLC&apos;
  ,System_Design__r.Sunnova_Overall_Site_Quality__c

  /* Else which includes CT Lease or CPF */
  ,System_Design__r.Overall_Site_Quality__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Lease Site Quality</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Line_Item_Net_Adjustment__c</fullName>
        <label>Scenario 1 Line Item Net Adjustment ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Line_Item_Top_Line_Adjustment__c</fullName>
        <label>Scenario 1 Line Item Top Line Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Loan_Fund_Minimum_Loan_Amount__c</fullName>
        <label>Scenario 1 Loan Fund Minimum Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Loan_Fund_Term__c</fullName>
        <label>Scenario 1 Loan Fund Term</label>
        <picklist>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Local_Tax_Credit_Amount__c</fullName>
        <label>Scenario 1 Local Tax Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Net_Initial_Outlay__c</fullName>
        <formula>IF( AND(ISPICKVAL(Scenario_1_Financing_Type__c,&apos;Purchase&apos;), Scenario_1_Term_Loan__c == Null), ( 
Scenario_1_Final_EPC_Price__c + Scenario_1_Total_Net_Adjustment__c - Scenario_1_Federal_Tax_Credit_Amount__c - Scenario_1_State_Rebate_Amount__c - Scenario_1_State_Tax_Credit_Amount__c - Scenario_1_Utility_Rebate_Amount__c - Scenario_1_County_Tax_Credit_Amount__c - Scenario_1_Depreciation_Basis__c - Scenario_1_Upfront_SREC_Amount__c) ,Scenario_1_Down_Payment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Net Initial Outlay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Non_Panel_Design_Price__c</fullName>
        <label>Scenario 1 Non-Panel Design Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_PBI_Amount__c</fullName>
        <label>Scenario 1 PBI Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_PPA_Adder_Reduction__c</fullName>
        <label>Scenario 1 PPA Adder Reduction</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Panel_Design_Price__c</fullName>
        <label>Scenario 1 Panel Design Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Portfolio_Default_Tier__c</fullName>
        <label>Scenario 1 Portfolio Default Tier</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Portfolio_Tier_Selected__c</fullName>
        <label>Scenario 1 Portfolio Tier Selected</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Prepaid_Financing_Amount__c</fullName>
        <label>Scenario 1 Prepaid Financing Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Price_per_Watt__c</fullName>
        <formula>Scenario_1_Design_Price__c / (1000 * System_Design__r.Total_System_Size_kW__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Price per Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Program_Net_Adjustment__c</fullName>
        <label>Scenario 1 Program Net Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Projected_Commission__c</fullName>
        <formula>Scenario_1_Base_Commission_Dollars__c + Scenario_1_Adder_Commission_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Projected Commission ($) is a projection of the consultant&apos;s commission value; subject to change upon Proposal, Contract and Sales Order creation.</inlineHelpText>
        <label>Scenario 1 Projected Commission ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Promotion_Cash_Rebate_Amount__c</fullName>
        <label>Scenario 1 Promotion Cash Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Proposal_Term_Months__c</fullName>
        <label>Scenario 1 Proposal Term Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Purchase_Balance_Amount__c</fullName>
        <label>Scenario 1 Purchase Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Refuse_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scenario 1 Refuse ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scenario_1_SAC_Incentives__c</fullName>
        <description>Sum(AvailableIncentiveOffers for Scenario 1 where Apply_Effective_Price = TRUE and SAC_Eligible = TRUE)</description>
        <label>Scenario 1 SAC Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_SAC_Loan_Adjustment__c</fullName>
        <label>Scenario 1 SAC Loan Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_SAC_Loan_Amount__c</fullName>
        <formula>IF(
  OR(ISNULL(Scenario_1_SAC_Loan__r.Maximum_Financed_Amount__c), Scenario_1_SAC_Loan__r.Maximum_Financed_Amount__c = 0)
  , Scenario_1_SAC_Incentives__c + Scenario_1_SAC_Loan_Adjustment__c
  , MIN(Scenario_1_SAC_Incentives__c + Scenario_1_SAC_Loan_Adjustment__c
      , (Scenario_1_Adjusted_Price_NUM__c - Scenario_1_Down_Payment__c - Scenario_1_Installer_Paid_Incentive_Amt__c - Scenario_1_SREC_Contract_Discount__c) * (Scenario_1_SAC_Loan__r.Maximum_Financed_Amount__c)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 SAC Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_SAC_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lease Fund record must be a loan</description>
        <label>Scenario 1 SAC Loan</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>System Design Quotes (Scenario 1 SAC Loan)</relationshipLabel>
        <relationshipName>System_Design_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scenario_1_SREC_Cash_Back__c</fullName>
        <label>Scenario 1 SREC Cash Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_SREC_Contract_Discount__c</fullName>
        <formula>Scenario_1_Upfront_SREC_Amount__c - Scenario_1_SREC_Cash_Back__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 SREC Contract Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Selected_For_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scenario 1 Selected For Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Set_Standard_Adjustment_Amoun__c</fullName>
        <label>Scenario 1 Set Standard Adjustment Amoun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Set_Standard_Adjustment_Type__c</fullName>
        <label>Scenario 1 Set Standard Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dollar Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollar per Watt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Site_Quality__c</fullName>
        <formula>/* Original spec:
(if Scenario N Lease Fund = ‘NRG’ then NRG Overall Site Quality, else if Scenario N Lease Fund = ‘Sunnova’ then Sunnova Overall Site Quality, else if Scenario N Lease Fund = ‘CT Lease’ or ‘CPF’ then Overall Site Quality, else if Scenario N Financing Type = ‘Purchase’ and there is only one other scenario with Financing Type = ‘Lease’ then site quality of Lease, else Overall Site Quality)
*/

IF(ISPICKVAL(Scenario_1_Financing_Type__c ,&apos;Purchase&apos;)
  ,IF(  /* If there is only one other scenario with Financing Type = ‘Lease’ */    
     Scenario_1_Is_Purchase_Single_Lease__c 
    /* then site quality of Lease */
    ,IF(ISPICKVAL(Scenario_2_Financing_Type__c, &apos;Lease&apos;) ,Scenario_2_Lease_Site_Quality__c
      ,IF(ISPICKVAL(Scenario_3_Financing_Type__c,&apos;Lease&apos;) ,Scenario_3_Lease_Site_Quality__c
        ,IF(ISPICKVAL(Scenario_4_Financing_Type__c ,&apos;Lease&apos;) ,Scenario_4_Lease_Site_Quality__c
          ,NULL
        ) 
      ) 
    )
    /* else Overall Site Quality */
    ,System_Design__r.Overall_Site_Quality__c 
  )
  /* Non purchase, so default to the Lease site quality calculation */
  ,Scenario_1_Lease_Site_Quality__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Site Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Standard_Net_Adjustment__c</fullName>
        <label>Scenario 1 Standard Net Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_State_Rebate_Amount__c</fullName>
        <label>Scenario 1 State Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_State_Tax_Credit_Amount__c</fullName>
        <label>Scenario 1 State Tax Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Term_Loan_Amount__c</fullName>
        <formula>IF( NOT( ISBLANK( Scenario_1_Term_Loan__c ) ), Scenario_1_Adjusted_Price_NUM__c - Scenario_1_Down_Payment__c - Scenario_1_SAC_Loan_Amount__c - Scenario_1_Installer_Paid_Incentive_Amt__c + Scenario_1_Term_Loan__r.Customer_Fees__c - Scenario_1_SREC_Contract_Discount__c, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Term Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Term_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lease Fund record must be a loan</description>
        <label>Scenario 1 Term Loan</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>System Design Quotes (Scenario 1 Term Loan)</relationshipLabel>
        <relationshipName>System_Design_Quotes4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Total_Depreciation_Amount__c</fullName>
        <label>Scenario 1 Total Depreciation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Total_Lease_Payments__c</fullName>
        <label>Scenario 1 Total Lease Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Total_Monthly_Payments__c</fullName>
        <label>Scenario 1 Total Monthly Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Total_Net_Adjustment__c</fullName>
        <formula>Scenario_1_Standard_Net_Adjustment__c + Scenario_1_Program_Net_Adjustment__c + Scenario_1_VP_Override_Net_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Total Net Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Total_Price_Adjustment__c</fullName>
        <formula>Scenario_1_Adjusted_Price_NUM__c - Scenario_1_Design_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Total Top Line Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Total_Program_Adjustments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scenario 1 Program Top Line Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Total_Projected_Annual_Output__c</fullName>
        <formula>IF(ISPICKVAL(Scenario_1_Financing_Type__c ,&apos;Purchase&apos;)
  ,IF(  /* If there is only one other scenario with Financing Type = ‘Lease’ */    
     Scenario_1_Is_Purchase_Single_Lease__c 
    /* then projected output of Lease */
    ,IF(ISPICKVAL(Scenario_2_Financing_Type__c, &apos;Lease&apos;) ,Scenario_2_Lease_Projected_Annual_Output__c 
      ,IF(ISPICKVAL(Scenario_3_Financing_Type__c,&apos;Lease&apos;) ,Scenario_3_Lease_Projected_Annual_Output__c
        ,IF(ISPICKVAL(Scenario_4_Financing_Type__c ,&apos;Lease&apos;) ,Scenario_4_Lease_Projected_Annual_Output__c
          ,NULL
        ) 
      ) 
    )
    /* else Overall projected annual output */
    , System_Design__r.Total_Projected_Annual_Output_kWh_y__c
  )
  /* Non purchase, so default to the Lease site quality calculation */
  ,Scenario_1_Lease_Projected_Annual_Output__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Total Projected Annual Output</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Total_Standard_Adjustments__c</fullName>
        <label>Scenario 1 Standard Top Line Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Trenching_Table_Value_Total__c</fullName>
        <label>Scenario 1 Trenching Table Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Upfront_SREC_Amount__c</fullName>
        <label>Scenario 1 Upfront SREC Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Utility_Rebate_Amount__c</fullName>
        <label>Scenario 1 Utility Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_VP_Override_Net_Adjustment__c</fullName>
        <label>Scenario 1 VP Override Net Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_VP_Sales_Adjustments__c</fullName>
        <label>Scenario 1 VP Override Top Line Adj</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Adder_Commission_Value__c</fullName>
        <inlineHelpText>Adder Commission Value ($) is a projection of entitlement impacts to consultant&apos;s commission rate; subject to change upon Proposal, Contract and Sales Order creation.</inlineHelpText>
        <label>Scenario 2 Adder Commission Value ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Adjusted_Price_NUM__c</fullName>
        <label>Scenario 2 Adjusted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Adjusted_Price_per_Watt_W__c</fullName>
        <formula>Scenario_2_Adjusted_Price_NUM__c / (1000 * System_Design__r.Total_System_Size_kW__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 2 Adjusted Price per Watt ($/W)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Apply_Standard_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scenario 2 Apply Standard Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Available_Portfolio_Tiers__c</fullName>
        <label>Scenario 2 Available Portfolio Tiers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Available_SREC_Contract_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario 2 Available SREC Contract Offer</label>
        <referenceTo>Available_SREC_Contract_Offer__c</referenceTo>
        <relationshipLabel>System Design Quotes (Scenario 2 Available SREC Contract Offer)</relationshipLabel>
        <relationshipName>System_Design_Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Average_Monthly_Tax__c</fullName>
        <description>Scenario 2 Average Monthly Tax</description>
        <inlineHelpText>Scenario 2 Average Monthly Tax</inlineHelpText>
        <label>Scenario 2 Average Monthly Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Avg_Solar_Elec_Cost_kWh__c</fullName>
        <label>Scenario 2 Avg Solar Elec Cost ($/kWh)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Avoided_Utility_Rate__c</fullName>
        <formula>CASE( Scenario_2_Lease_Fund__r.Avoided_Utility_Rate_Override__c
  , &apos;NRG&apos;
  , System_Design__r.NRG_Avoided_Utility_Rate__c

  , &apos;Sunnova&apos;
  , System_Design__r.Sunnova_Avoided_Utility_Rate__c

  , System_Design__r.Avoided_Utility_Rate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 2 Avoided Utility Rate ($/kWh)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Base_Commission_Dollars__c</fullName>
        <formula>Scenario_2_Adjusted_Price_NUM__c * Scenario_2_Base_Commission_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Base Commission ($) is a projection of consultant&apos;s commission amount; not final and subject to change upon Proposal, Contract and Sales Order creation.</inlineHelpText>
        <label>Scenario 2 Base Commission ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Base_Commission_Percent__c</fullName>
        <formula>IF(Community_Program_Offer__c == null,
((((100 * $Setup.ContractSettings__c.Minimum_Commission_Rate__c - 100 * $Setup.ContractSettings__c.Maximum_Commission_Rate__c) / ($Setup.ContractSettings__c.Maximum_Promotion__c - $Setup.ContractSettings__c.Minimum_Promotion__c)) * Scenario_2_Commission_Impact_Promotions__c) + (100 * $Setup.ContractSettings__c.Maximum_Commission_Rate__c)) / 100, $Setup.ContractSettings__c.Solarize_Commission_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Base Commission (%) is a projection of consultant&apos;s commission rate; not final and subject to change upon Proposal, Contract and Sales Order creation.</inlineHelpText>
        <label>Scenario 2 Base Commission (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Comm_Prog_Discount_frm_Tier1__c</fullName>
        <label>Scenario 2 Comm Prog Discount frm Tier1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Comm_Prog_Tier_1_Design_Price__c</fullName>
        <label>Scenario 2 Comm Prog Tier 1 Design Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Commission_Impact_Promotions__c</fullName>
        <description>Field is measured in $/Watt</description>
        <inlineHelpText>Field is measured in $/Watt</inlineHelpText>
        <label>Scenario 2 Commission Impact Promotions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Contract_Signatory_1__c</fullName>
        <description>Scenario 2 Contract Signatory 1</description>
        <inlineHelpText>Scenario 2 Contract Signatory 1</inlineHelpText>
        <label>Scenario 2 Contract Signatory 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Contract_Signatory_2__c</fullName>
        <description>Scenario 2 Contract Signatory 2</description>
        <inlineHelpText>Scenario 2 Contract Signatory 2</inlineHelpText>
        <label>Scenario 2 Contract Signatory 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_2_County_Tax_Credit_Amount__c</fullName>
        <label>Scenario 2 County Tax Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Credit_Tier__c</fullName>
        <label>Scenario 2 Credit Tier</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Cumulative_Production_Year_10__c</fullName>
        <description>Scenario 2 Cumulative Production Year 10</description>
        <inlineHelpText>Scenario 2 Cumulative Production Year 10</inlineHelpText>
        <label>Scenario 2 Cumulative Production Year 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Cumulative_Production_Year_11__c</fullName>
        <description>Scenario 2 Cumulative Production Year 11</description>
        <inlineHelpText>Scenario 2 Cumulative Production Year 11</inlineHelpText>
        <label>Scenario 2 Cumulative Production Year 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Cumulative_Production_Year_12__c</fullName>
        <description>Scenario 2 Cumulative Production Year 12</description>
        <inlineHelpText>Scenario 2 Cumulative Production Year 12</inlineHelpText>
        <label>Scenario 2 Cumulative Production Year 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Depreciation_Basis__c</fullName>
        <label>Scenario 2 Depreciation Basis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>